--- a/src/main/resources/assets/refraction/lang/en_US.lang
+++ b/src/main/resources/assets/refraction/lang/en_US.lang
@@ -109,14 +109,14 @@ refraction.book.name=Information Tablet
 
 refraction.book.start.title=Getting Started
 
-refraction.book.start.hello.title=&a&lRefractionr&
+refraction.book.start.hello.title=&a&lRefraction&r
 refraction.book.start.hello.desc=Blinded by the Light
 refraction.book.start.hello.content1=Hello there, [player]! I'm Eve, your personal assistant! <br> I'm here to help you &m<study phys&kics&r&m>&rlearn how to manipulate light using reflection and refraction!
 refraction.book.start.hello.content2=Ever wanted to suck items and entities with a single beam of light? Ever wanted to create a disco ball based quarry? How about creating a laser defense system? Or, heck, maybe you just wanted to make an epic laser show?
 refraction.book.start.hello.content3=Well then, [player], welcome to my world of reflection and refraction! You will not be disappointed at the results of mirror arrays and rainbows. Let's get started, shall we?
 
 
-refraction.book.start.rainbow.title=&a&lThe Rainbowr&
+refraction.book.start.rainbow.title=&a&lThe Rainbow&r
 refraction.book.start.rainbow.desc=RGB
 refraction.book.start.rainbow.content1=I'm first going to start off by teaching you the very concept and nature of light manipulation, so to start off: Light is made up of 3 primary colors: &c&lRed&r, &a&lGreen&r, and &1&lBlue&r. They are often merged into the familiar phrase '&c&lR&a&lG&1&lB&r'. You will base your color merging knowledge on those 3 primary colors.
 refraction.book.start.rainbow.content2=Light also has a strength, or in more technical terms is called 'alpha value'. In this mod, we represented this value as the 'white bar' indicating power/strength/amount/alpha or whatever you want to call it.
@@ -126,7 +126,7 @@ refraction.book.start.rainbow.content5=The way we represent the rgb values (in r
 refraction.book.start.rainbow.content6=The value that DOES matter and not as a ratio is the white bar which indicates alpha/strength/amount. You can see the recipe of the Reflection Chamber on the right tab to see an example of the bars viewed in the recipes.
 refraction.book.start.rainbow.content7=&c&l[!FOR FUTURE REFERENCE!]&r <br> Solar alpha/strength (used in magnifiers): [config:solar_strength] <br> Glowstone alpha/strength (used in laser blocks): [config:glowstone_strength]
 
-refraction.book.start.baby.title=&a&lBaby Stepsr&
+refraction.book.start.baby.title=&a&lBaby Steps&r
 refraction.book.start.baby.desc=Initial Setup
 refraction.book.start.baby.content1=Ok, let's see here... Ah, yes. So you'll first want to make an &1&lAssembly Table&r. This simple block will help you craft everything you need. I will guide you through the steps of its usage when we get to that. For now, craft one. It requires 7 iron ingots and 1 &1&lLens&r.
 refraction.book.start.baby.content2=Next, you'll want to craft a &1&lMagnifier&r. When provided with a 3x3 of &1&lLens& blocks above it - provided that they have a line of sight to the sky - it will converge the sunlight into a focused beam of light directly below it.
@@ -136,7 +136,7 @@ refraction.book.start.shiny.title=&a&lOooh, Shinyr&
 refraction.book.start.shiny.desc=asda.
 refraction.book.start.shiny.content1=Neither gold nor iron have the reflective properties you'd want to be able to play around with light, but they both are a step in the right direction. To get something very reflective, craft an iron ingot with a gold ingot in a regular crafting window. It'll give you a highly &1&lReflective Alloy&r, very useful for light manipulation.
 
-refraction.book.start.reflection.title=&a&lReflectionr&
+refraction.book.start.reflection.title=&a&lReflection&r
 refraction.book.start.reflection.desc=Mirror Array
 refraction.book.start.reflection.content1=Now that you have more reflective resources, you can dispense with the annoyance of placing &1&lMagnifier&r exactly above the table. By creating a Mirror with &1&lReflective Alloys&r and rotating it using a &1&lScrewdriver&r you can redirect beams to any direction.
 refraction.book.start.reflection.content2=You can craft a &1&lMirror&r using the assembly table you crafted. The &1&lAssembly Table&r will allow you to make such materials, by using magnifiers to focus beams into it and providing a &lredstone signal&r, it will fuse the items inside of it together provided the beams being pointed into it evaluate to the correct color range and add up to the proper beam strength value (that also has a max and min per recipe).
@@ -148,7 +148,7 @@ refraction.book.start.reflection.content7=And if the packmaker hasn't tampered w
 refraction.book.start.reflection.content8=Feed the table the items by right clicking it and &lpowering it with a redstone signal&r. Red particles will signal progress, a green flash will signal completion And now that you have a mirror:
 refraction.book.start.reflection.content9=Using the &1&lScrewdriver&r on the air will decrease its precision, and sneak-using it will increase its precision. Using it on a mirror's top will rotate it horizontally, and on a mirror's side will rotate it vertically.
 
-refraction.book.start.refraction.title=&a&lRefractionr&
+refraction.book.start.refraction.title=&a&lRefraction&r
 refraction.book.start.refraction.desc=TODO
 refraction.book.start.refraction.content1=So far, you've only witnessed thin white beams, let's change it up a bit!
 refraction.book.start.refraction.content2=Different colors of beams can produce some effects. These effects can be highly beneficial to your needs, or just plain fun. I'll get to these effects later on, but to acquire them, you'll want to craft yourself a &1&lPrism&r.
@@ -156,7 +156,7 @@ refraction.book.start.refraction.content3=This particular block will split a lig
 refraction.book.start.refraction.content4=Next, right click the &1&lAssembly Table&r with 6 &1&lLens&r blocks to input the items and provide a redstone signal to the table and it will craft you your first &1&lPrism&r
 refraction.book.start.refraction.content5=&c&l[!] WARNING [!]&r Do NOT place the &1&lPrism&r in front of a beam just yet. Please read the next section before proceeding because the next part can be lethal to both your person and your surroundings if caution is not taken!
 
-refraction.book.start.rgb.title=&a&lRGBr&
+refraction.book.start.rgb.title=&a&lRGB&r
 refraction.book.start.rgb.desc=Prism Splitting
 refraction.book.start.rgb.content1=Now, I know what you might be thinking: Eve, what the crap are the effects, what do they look like, and how do I use them already?! Ok, so first off: I'm just doing my job calm down. I NEED to give you the precautions and warnings beforehand. Anyways, I'll stop babbling and start:
 refraction.book.start.rgb.content2=As I've said above, a &1&lPrism&r will split light beams into 3 separate colors: red, green, and blue. All three have separate effects which are the following: The blue beam is a freeze effect. It will slow you down when it's at low strength. Higher strengths include blindness, nausea, weakenss, etc..
@@ -164,7 +164,7 @@ refraction.book.start.rgb.content3=The green beam is a bonemeal beam. If pointed
 refraction.book.start.rgb.content4=And now comes the most dangerous part... The red beam is a burn beam. It has a chance based on it's strength to set any block it touches on fire and any entity it touches aflame. This beam is &lextremely&r dangerous if not created with caution because it can and WILL burn down your surroundings easily if you are not careful. This is especially true because of the green beam, because if an area gets bonemealed and burnt, it will cause tons of fire based damage to your area.
 refraction.book.start.rgb.content5=The moment you place down the prism, all 3 of these beams will be split and refracted outwards. Be VERY careful that you are in a safe, burn free zone.
 
-refraction.book.start.effects.title=&a&lEffects
+refraction.book.start.effects.title=&a&lEffects&r
 refraction.book.start.effects.desc=Beam Merging
 refraction.book.start.effects.content1=So, if you haven't burnt down your area already, let's get to the more notable effects. You can get the rest of the effects from the mod using a &1&lReflection Chamber&r.
 refraction.book.start.effects.content2=This block will merge any two or more beams that intersect with it and produce a final beam based on the weighted average of all the colors that went into it, taking into account color strength as well as outputting the beam in an averaged angle between them all.
@@ -175,7 +175,7 @@ refraction.book.start.effects.content6=Yellow: Has a chance, based on strength, 
 refraction.book.start.effects.content7=Pink: Has a chance, based on strength, to place a block that it intersects with in item form.
 refraction.book.start.effects.content8=Orange: When pointed at a redstone component, will power it. Has to have at least 1 air block available anywhere around the block it's pointing at. Also will respect the side of the redstone component it hits. Redstone power output depends on potency .
 
-refraction.book.start.merging.title=&a&lMergingr&
+refraction.book.start.merging.title=&a&lMerging&r
 refraction.book.start.merging.desc=TODO
 refraction.book.start.merging.content1=Due to much confusion relating to the crafting of blocks, I shall guide you on how to make the &1&lReflaction Chamber&r step by step to help you out.
 refraction.book.start.merging.content2=First of all, looking at the recipe: it requires 'half green' (since we work with ratios in the 3 colors), no blue, and full red. IE: We need twice as much red than green.
@@ -188,7 +188,7 @@ refraction.book.start.merging.content8=Next just input your items and power it. 
 
 refraction.book.items.title=Items
 
-refraction.book.items.screw.title=&a&lScrewdriver&
+refraction.book.items.screw.title=&a&lScrewdriver&r
 refraction.book.items.screw.desc=TODO
 refraction.book.items.screw.content1=You've already supposedly read and used the &1&lScrewdriver&r, but to recap:
 refraction.book.items.screw.content2=Right click the air to increment it's angle. Shift right click to decrement. Right click the top or bottom of a mirror/splitter to rotate it around the y-axis. Shift right click to reverse the rotation
@@ -203,16 +203,16 @@ refraction.book.items.alloy.content1=You've already seen the &1&lReflective Allo
 refraction.book.items.alloy.content2=You can also craft reflective alloy armor with this ingot. Each piece will decrease the potency of any beam effect that hits you. A full set wont completely negate effects, but you will become a walking mirror. IE: Beams will literally bounce and reflect off of you in the direction you face.
 
 
-refraction.book.items.pen.title=&a&lLaser Penr&
+refraction.book.items.pen.title=&a&lLaser Pen&r
 refraction.book.items.pen.desc=TODO
 refraction.book.items.pen.content1=KAT LAZORS.
 
-refraction.book.items.grenade.title=&a&lPhoton Grenadesr&
+refraction.book.items.grenade.title=&a&lPhoton Grenades&r
 refraction.book.items.grenade.desc=TODO
 refraction.book.items.grenade.content1=When placed into an &1&lAssembly Table&r with any beam hitting it, it will infuse the grenade with that color. When thrown, the grenade will explode violently with the color (taking into account the original strength as well)
 
 
-refraction.book.items.cannon.title=&a&lPhoton Cannonr&
+refraction.book.items.cannon.title=&a&lPhoton Cannon&r
 refraction.book.items.cannon.desc=TODO
 refraction.book.items.cannon.content1=The &1&lPhoton Cannon&r is a gun that continuously fires a beam provided you have a Light Cartridge in your inventory.
 refraction.book.items.cannon.content2=When holding the gun, the bar on the right side of your HUD will show up indicating the fuel or amount of ammo left in the loaded cartridge.
@@ -222,18 +222,18 @@ refraction.book.items.cannon.content4=It is worth noting that the hud on the rig
 
 refraction.book.blocks.title=Blocks
 
-refraction.book.blocks.laser.title=&a&lLaser / Electric Laserr&
+refraction.book.blocks.laser.title=&a&lLaser / Electric Laser&r
 refraction.book.blocks.laser.desc=TODO
 refraction.book.blocks.laser.content1=The &1&lLaser&r block, when fed with glowstone, will produce a light beam that lasts for 25 seconds. This block is different from a magnifier in that it's beam is 4x more powerful in strength than a &1&lMagnifier&r.
 refraction.book.blocks.laser.content2=You can insert glowstone into it by either right clicking on it or pointing a hopper into it. If you want to continually power it automatically, consider a witch farm or a mob farm that filters witches.
 refraction.book.blocks.laser.content3=The Electric Laster block is like the regular laser block. The only difference is that it accepts tesla/forge energy instead of glowstone.
 
-refraction.book.blocks.mirror.title=&a&lMirrors / Splitterr&
+refraction.book.blocks.mirror.title=&a&lMirrors / Splitter&r
 refraction.book.blocks.mirror.desc=TODO
 refraction.book.blocks.mirror.content1=This &1&lSplitter&r block is a half-mirror. It has the same properties as a mirror, but instead of reflecting a beam directly, the beam will be split into 2 halves. One is reflected like that of a normal mirror, and the other half phases right through the beam.
 
 
-refraction.book.blocks.disco.title=&a&lDisco Ballr&
+refraction.book.blocks.disco.title=&a&lDisco Ball&r
 refraction.book.blocks.disco.desc=TODO
 refraction.book.blocks.disco.content1=The DiscoBall is one of the most interesting blocks in the mod. When this block receives a redstone signal, it will start spinning (it's a disco ball after all).
 refraction.book.blocks.disco.content2=When a beam hits this block while it's active, it will spread the beam in all directions. This results in some very very interesting behavior. This can also be considered to be one of the most powerful and most dangerous blocks in the mod. You can point any beam into it and it will produce smaller beams of that color in every single direction.
@@ -241,24 +241,24 @@ refraction.book.blocks.disco.content3=You could point a burn beam at it and it'l
 refraction.book.blocks.disco.content4=&c&l[!] WARNING [!]&r It is HIGHLY recommended you surround the block with reflective alloy blocks to avoid potential disasters from occuring.
 
 
-refraction.book.blocks.sensor.title=&a&lSensorr&
+refraction.book.blocks.sensor.title=&a&lSensor&r
 refraction.book.blocks.sensor.desc=TODO
 refraction.book.blocks.sensor.content1=This little dongle of a block will produce a flashing redstone signal against the block it's placed against. You can get a full continuous signal with 1 repeater from it but it's a good compact clock block otherwise when a beam intersects with it. Moreover, beams will phase directly through it for convenience.
 
 
-refraction.book.blocks.fiber.title=&a&lOptic Fiberr&
+refraction.book.blocks.fiber.title=&a&lOptic Fiber&r
 refraction.book.blocks.fiber.desc=TODO
 refraction.book.blocks.fiber.content1=&1&lOptic fiber&r cables are very important cabling here. Any beam pointed at one end of an &1&lOptic Fiber&r cable will output the beam at the other end of the cable whilst also adjusting it to the cardinal direction it's facing with absolutely no loss.
 refraction.book.blocks.fiber.content2=One of the 2 cable facings will always face the direction you place it against for convenience. No more than 2 connections can be made per fiber optic cable, so it cannot split beams.
 refraction.book.blocks.fiber.content3=These cables are also useful when working with &1&lReflection Chambers&r. If you place a cable against the face of a reflection chamber - provided that the angle of the output beam from the &1&lReflection Chamber&r is from the face the cable is against - it will output the beam straight to the cable, directly adjusting it to a cardinal direction.
 
 
-refraction.book.blocks.spectro.title=&a&lSpectrometerr&
+refraction.book.blocks.spectro.title=&a&lSpectrometer&r
 refraction.book.blocks.spectro.desc=TODO
 refraction.book.blocks.spectro.content1=The &1&lSpectrometer&r is a block that can show you the strength of each individual array of color from a beam intersecting with the block. It will show you red, green, blue, and white bars on its face indicating the rgb values of the beams hitting it as well as white acting as beam strength.
 
 
-refraction.book.blocks.exciter.title=&a&lElectron Exciterr&
+refraction.book.blocks.exciter.title=&a&lElectron Exciter&r
 refraction.book.blocks.exciter.desc=TODO
 refraction.book.blocks.exciter.content1=Our friends at aperture science have provided us with their amazing technology of hard light bridges!
 refraction.book.blocks.exciter.content2=By pointing 2 (or more) attraction (cyan) beams perfectly parallel and pointing straight into 2 adjacent &1&lElectron Exciters&r, a bridge made out of pure light will form between them.
@@ -266,7 +266,7 @@ refraction.book.blocks.exciter.content3=This bridge is indestructible, and there
 refraction.book.blocks.exciter.content4=My friend, GlAdOs, told me to send you this message: 'These bridges are made from natural light that we pumped in from the surface. If you rubbed your cheek on one, it would be like standing outside with the sun shining on your face. It would also set your hair on fire, so don't actually do it.
 
 
-refraction.book.blocks.axyz.title=&a&lAXYZr&
+refraction.book.blocks.axyz.title=&a&lAXYZ&r
 refraction.book.blocks.axyz.desc=TODO
 refraction.book.blocks.axyz.content1=I was told that this technology isn't quite advanced enough yet, as it can generate wormholes, but only photons can pass through, while matter, on the other hand, cannot. Any beam that goes in will come out the other end, but the wormhole isn’t stable enough to work the other way around. The tear in space and time isn't big nor powerful enough to do anything but transport beams.
 refraction.book.blocks.axyz.content2=The mechanics of this device are unusual to say the least. It says here that you need to feed a dispersion beam (magenta) into a &1&lTranslocator&r pointed directly at the generator, via fiber optic cables hooked into the translocator.
@@ -277,14 +277,14 @@ refraction.book.blocks.axyz.content5=By repeating the process of using teleposer
 
 refraction.book.misc.title=Misc
 
-refraction.book.misc.inv.title=&a&lInventory Managementr&
+refraction.book.misc.inv.title=&a&lInventory Management&r
 refraction.book.misc.inv.desc=TODO
 refraction.book.misc.inv.content1=You might be wondering if there's a way to extract and insert items to and from inventories using light. Well... There is! The disperse (magenta) and attract (cyan) effects can insert and extract items to and from inventories respectively.
 refraction.book.misc.inv.content2=The actual process however, is a bit crude... You see... You have to kinda... Burn a hole into the inventory with a burn beam first.  A laser pointing at the inventory will then extract or insert the items through that hole. So you must point a burn beam on the inventory desired.
 refraction.book.misc.inv.content3=Physics is beautiful, isn't it?
 
 
-refraction.book.misc.effects.title=&a&lEffectsr&
+refraction.book.misc.effects.title=&a&lEffects&r
 refraction.book.misc.effects.desc=TODO
 refraction.book.misc.effects.content1=Red: burning entities and block. Cookable items will be cooked this way. With a certian alpha, red will also heat up furnaces. <br> Blue: gives various of potion effects to entities passing (mostly negative). Potion effects vary on beam alpha. <br> Green: Will apply bonemeal effect to growable blocks hit. Will also give players saturation.
 refraction.book.misc.effects.content2=Cyan: Will pull entities. Creates light bridges on the exciter. Items can be pulled out of inventories. <br> Magenta: Will push entities away. Items can be pushed in inventories. <br> Yellow: Block breaking effect.
